AM_CPPFLAGS = -I/usr/include/SDL2
AM_LDFLAGS = -lSDL2 -lSDL2_mixer
bin_PROGRAMS = zSILENCERlinux
zSILENCERlinux_SOURCES = audio.cpp basedoor.cpp terminal.cpp bipedal.cpp \
					blasterprojectile.cpp bodypart.cpp button.cpp \
					buyableitem.cpp camera.cpp civilian.cpp \
					config.cpp creditmachine.cpp dedicatedserver.cpp detonator.cpp \
					flamerprojectile.cpp flareprojectile.cpp fixedcannon.cpp grenade.cpp \
					game.cpp guard.cpp healmachine.cpp \
					hittable.cpp input.cpp interface.cpp inventorystation.cpp lagsimulator.cpp \
					laserprojectile.cpp lobby.cpp lobbygame.cpp main.cpp map.cpp \
					minimap.cpp object.cpp objecttypes.cpp overlay.cpp palette.cpp \
					peer.cpp physical.cpp platform.cpp player.cpp plasmaprojectile.cpp \
					plume.cpp projectile.cpp pickup.cpp renderer.cpp resources.cpp \
					robot.cpp rocketprojectile.cpp scrollbar.cpp secretreturn.cpp \
					selectbox.cpp serializer.cpp sha1.cpp shrapnel.cpp \
					sprite.cpp stats.cpp state.cpp surface.cpp surveillancemonitor.cpp team.cpp \
					teambillboard.cpp techstation.cpp textbox.cpp \
					textinput.cpp toggle.cpp vent.cpp walldefense.cpp wallprojectile.cpp \
					warper.cpp world.cpp user.cpp \
					zlib/adler32.c zlib/compress.c zlib/crc32.c zlib/deflate.c \
					zlib/inffast.c zlib/inflate.c zlib/inftrees.c zlib/trees.c \
					zlib/uncompr.c zlib/zutil.c